force-app/main/default/objects/SCMT__Desk_Message__c/SCMT__Desk_Message__c.object-meta.xml
<CustomObject>
    <description>This custom object is used as a temporary holding area for migrating messages. This is needed because we are using the bulk API to insert cases, and we cannot depend on the case existing when we try to import the associated messages. So the messages are imported to this custom object in a serialized manner, and then after cases have finished migrating, the messages are imported.

After the items in this object have been migrated, this object should be cleared and/or deleted.</description>
    <label>Desk Message</label>
    <nameField>
        <label>Desk Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>