force-app/main/default/objects/SCMT__Desk_Message__c/fields/SCMT__Data__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Data__c</fullName>
    <description>This field holds the JSON encoded data representing the feed items for the case.</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>