force-app/main/default/objects/SCMT__Desk_Message__c/fields/SCMT__Error__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Error__c</fullName>
    <description>This field holds any errors that occurred during the conversion process.</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>