force-app/main/default/objects/SCMT__Desk_Message__c/fields/SCMT__Status__c.field-meta.xml
<CustomField>
    <fullName>SCMT__Status__c</fullName>
    <description>This field indicates if the record has been converted into the appropriate Salesforce.com object or if the conversion process failed.</description>
    <label>Status</label>
    <length>99</length>
    <type>Text</type>
</CustomField>